kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
spec:
  rules:
  - host: hello.world
    http:
      - path: /
        backend:
          serviceName: flask
          servicePort: 8080
